[package]
name = "utilites"
version = "0.1.0"
edition = "2021"

[features]
default = ["dates", "hashing", "retry", "http"]
dates = ["dep:chrono"]
hashing = ["dep:blake2", "dep:hashbrown", "dep:base64ct"]
http = [
    "dep:hyper",
    "dep:url",
    "dep:hyper-util",
    "dep:http-body-util",
    "dep:tower-http",
    "dep:tokio",
    "dep:tokio-test",
    #"dep:reqwest",
    #"dep:reqwest-retry",
    #"dep:reqwest-middleware",
    #"dep:tokio-retry"
]
retry = ["dep:tokio"]
# flexbuffers = ["dep:flexbuffers"]
# binary = ["dep:bitcode"]
# json = ["dep:serde_json"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono= {version = "0.4.38", optional = true}
thiserror="1.0.64"
serde_json = "1.0.128"
serde = { version = "1.0.210", features = ["derive"] }
toml = {version = "0.8.19", features = ['parse']}
logger = {git = "https://github.com/P40b0s/logger.git", branch = "main"}
rand="0.8.5"
#hashing
blake2 = {version="0.10.6", optional = true}
base64ct = {version = "1.6.0", features = ["alloc"], optional = true}
hashbrown = {version ="0.15" , features = ['serde'], optional = true}
#http
hyper= {version="1.5.0", optional = true}
hyper-util = {version = "0.1.9", optional = true, features = ["full"]}
http-body-util= {version = "0.1.2", optional = true}
tower-http = {version = "0.6.1", optional = true, features = ["cors", "fs", "trace"]}
tokio = { version = "1.40.0",optional = true, features = ["macros", "rt", "rt-multi-thread", "test-util"] }
tokio-test= {version ="0.4.4", optional = true}
url = {version="2.5.2", optional = true}
# reqwest = {version="0.12.5", optional = true, features=["json"]}
# reqwest-retry = {version="0.6.0", optional = true}
# reqwest-middleware = {version="0.3.2", optional = true}
# tokio-retry = {version="0.3", optional = true}