[package]
name = "utilites"
version = "0.1.0"
edition = "2021"

[features]
default = ["dates", "hashing", "retry", "http", "async-io"]
dates = ["dep:chrono"]
hashing = ["dep:blake2", "dep:hashbrown", "dep:base64ct"]
async-io = ["dep:tokio"]
http = [
    "dep:hyper",
    "dep:url",
    "dep:hyper-util",
    "dep:http-body-util",
    "dep:tower-http",
    "dep:tokio",
    "dep:rustls",
    "dep:hyper-rustls"
    #"dep:reqwest",
    #"dep:reqwest-retry",
    #"dep:reqwest-middleware",
    #"dep:tokio-retry"
]
retry = ["dep:tokio"]
encoding = ["dep:encoding", "dep:tokio"]
# flexbuffers = ["dep:flexbuffers"]
# binary = ["dep:bitcode"]
# json = ["dep:serde_json"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono= {version = "0.4.38", optional = true}
thiserror="2.0.11"
serde_json = "1.0.132"
serde = { version = "1.0.214", features = ["derive"] }
toml = {version = "0.8.19", features = ['parse']}
logger = {git = "https://github.com/P40b0s/logger.git", branch = "main"}
rand="0.9.0"
#hashing
blake2 = {version="0.10.6", optional = true}
base64ct = {version = "1.6.0", features = ["alloc"], optional = true}
hashbrown = {version ="0.15.2" , features = ['serde'], optional = true}
#http
hyper= {version="1.5.2", optional = true}
hyper-util = {version = "0.1.10", optional = true, features = ["full"]}
http-body-util= {version = "0.1.2", optional = true}
tower-http = {version = "0.6.2", optional = true, features = ["cors", "fs", "trace"]}
tokio = { version = "1.43.0",optional = true, features = ["macros", "rt", "rt-multi-thread", "test-util", "fs"] }
url = {version="2.5.4", optional = true}
rustls= {version="0.23.21", optional = true, features = ["ring"]}
hyper-rustls= {version="0.27.5", optional = true}
ring="0.17.8"
#encoding
encoding = { version = "0.2.33", optional = true}

[dev-dependencies]

tokio-test= {version ="0.4.4"}
# reqwest = {version="0.12.5", optional = true, features=["json"]}
# reqwest-retry = {version="0.6.0", optional = true}
# reqwest-middleware = {version="0.3.2", optional = true}
# tokio-retry = {version="0.3", optional = true}