[package]
name = "utilites"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"] 

[features]
default = []
dates = ["dep:chrono"]
hashing = ["dep:blake3", "dep:base64ct"]
async-io = ["dep:tokio", "dep:futures"]
http = [
    "dep:hyper",
    "dep:url",
    "dep:hyper-util",
    "dep:http-body-util",
    "dep:tower-http",
    "dep:tokio",
    "dep:rustls",
    "dep:hyper-rustls"
    #"dep:reqwest",
    #"dep:reqwest-retry",
    #"dep:reqwest-middleware",
    #"dep:tokio-retry"
]
retry = ["dep:tokio"]
encoding = ["dep:encoding", "dep:tokio"]
# flexbuffers = ["dep:flexbuffers"]
# binary = ["dep:bitcode"]
# json = ["dep:serde_json"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono= {version = "0.4.40", optional = true}
thiserror="2.0.12"
serde_json = "1.0.140"
serde = { version = "1.0.219", features = ["derive"] }
toml = {version = "0.8.20", features = ['parse']}
logger = {git = "https://github.com/P40b0s/logger.git", branch = "main"}
rand="0.9.1"
#hashing
blake3 = {version="1.8.2", optional = true}
base64ct = {version = "1.7.3", features = ["alloc"], optional = true}
#io
futures = {version = "0.3.31", optional = true}
#http
hyper= {version="1.6.0", optional = true}
hyper-util = {version = "0.1.11", optional = true, features = ["full"]}
http-body-util= {version = "0.1.3", optional = true}
tower-http = {version = "0.6.2", optional = true, features = ["cors", "fs", "trace"]}
tokio = { version = "1.44.2",optional = true, features = ["macros", "rt", "rt-multi-thread", "test-util", "fs", "io-util"] }
url = {version="2.5.4", optional = true}
rustls= {version="0.23.26", optional = true, features = ["ring"]}
hyper-rustls= {version="0.27.5", optional = true}
ring="0.17.14"
#encoding
encoding = { version = "0.2.33", optional = true}

# WASM
# [target.'cfg(target_arch = "wasm32")'.dependencies]
# wasm-bindgen = "0.2.100"
# js-sys = "0.3.77"
# chrono-features = { package = "chrono", version = "0.4.40", features = ["wasmbind"] }

[dev-dependencies]
tokio-test= {version ="0.4.4"}
# reqwest = {version="0.12.5", optional = true, features=["json"]}
# reqwest-retry = {version="0.6.0", optional = true}
# reqwest-middleware = {version="0.3.2", optional = true}
# tokio-retry = {version="0.3", optional = true}